[package]
name = "criwen"
version = "0.1.0"
authors = ["Mārtiņš Briedis <martins.briedis@mabri.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
serde = "1.0.126"
log = "0.4.14"
simple_logger = "1.11.0"
num_cpus = "1.13.0"
dashmap = "4.0.2"
bytes = "1"
clap = "2.33.3"
config = "0.11"
serde_derive = "^1.0.8"
toml = "0.5.8"
json = "0.12.4"
